# Ember

./: CMakeLists.txt  README.md  compiler.cpp  make
dev notes/: 2025-07-10 17:55:12 .md  2025-07-12 12:36:41.md  Fri Jul 11 23:43:43 2025.md  Sat Jul 12 12:36:41 2025.md
include/: token.hpp  tokenizer.hpp
product/: program.asm
src/: compiler.cpp  make.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
testing/: CMakeLists.txt  model.asm  test.cpp
